--- a/gapl/src/app/pages/patients/patients/patients.component.html
+++ b/gapl/src/app/pages/patients/patients/patients.component.html
@@ -1,7 +1,6 @@
 <p-dataView #dv [value]="products" [paginator]="true" [rows]="18" (onChangeLayout)="onLayoutToggle($event)">
     <ng-template pTemplate="header">
-        <div class="flex flex-col md:flex-row md:justify-between align-bottom place-items-end">
-
+        <div class="flex flex-row justify-between align-bottom place-items-end">
             <div class="flex gap-3">
                 <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
                 <p-dropdown [options]="sortOptions" placeholder="Sort By Date" (onChange)="onSortChange($event)"
